--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+body {
+  background-color: rgb(70, 84, 45);
+  color: whitesmoke;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
